results/SVCOMP/conversational/log-ExMIT-2024_03_10_18_55_40.txt
import java.util.Random;

public class ExMIT {
    //@ requires \fresh(new Random());
    //@ ensures true;
    public static void main(String[] args) {
        if (new Random().nextInt() == 1) foo(0);
    }

    //@ requires i == 0;
    //@ ensures \result == 0;
    public static int foo(int i) {
        if (2 * (i + 1) == 10) {
            assert false;
            return 1;
        }
        return 0;
    }

    //@ requires true;
    //@ ensures \result == 0 || \result == 1;
    public static int boo(float i) {
        if ((i + 1) * 2 > 10) return 1;
        return 0;
    }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: Object allocation is not permitted in specification expressions
    //@ requires \fresh(new Random());
                        ^
1 error

import java.util.Random;

public class ExMIT {
    //@ ensures true;
    public static void main(String[] args) {
        Random random = new Random();
        if (random.nextInt() == 1) foo(0);
    }

    //@ requires i == 0;
    //@ ensures \result == 0;
    public static int foo(int i) {
        if (2 * (i + 1) == 10) {
            assert false;
            return 1;
        }
        return 0;
    }

    //@ requires true;
    //@ ensures \result == 0 || \result == 1;
    public static int boo(float i) {
        if ((i + 1) * 2 > 10) return 1;
        return 0;
    }
}

